dulo made me do it 2

--- a/index.html
+++ b/index.html
@@ -25,17 +25,6 @@
     <script type="text/babel" src="src/App.js"></script>
     
     <!-- Authentication Wrapper (entry point) -->
-    <script type="text/babel">
-    // Initialize the app with authentication wrapper
-    document.addEventListener('DOMContentLoaded', function() {
-      // Load AuthApp as the entry point that will render App
-      const script = document.createElement('script');
-      script.type = 'text/babel';
-      script.src = 'src/AuthApp.js';
-      document.body.appendChild(script);
-      
-      console.log('Authentication wrapper loaded');
-    });
-    </script>
+    <script type="text/babel" src="src/AuthApp.js"></script>
 </body>
 </html>
