reverted sqlite implementation for rework

--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
 <body>
     <div id="root"></div>
 
-    <!-- API and Component Scripts -->
-    <script type="text/babel" src="src/api.js"></script>
-    <script type="text/babel" src="src/auth.js"></script>
-    
-    <!-- Main App Component (not the entry point) -->
+    <!-- App Scripts -->
     <script type="text/babel" src="src/App.js"></script>
-    
-    <!-- Authentication Wrapper (entry point) -->
-    <script type="text/babel" src="src/AuthApp.js"></script>
 </body>
 </html>
